_generated-doc/2.13/config/quarkus-scheduler.adoc

:summaryTableId: quarkus-scheduler
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[[quarkus-scheduler_configuration]]link:#quarkus-scheduler_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-scheduler_quarkus.scheduler.cron-type]]`link:#quarkus-scheduler_quarkus.scheduler.cron-type[quarkus.scheduler.cron-type]`

[.description]
--
The syntax used in CRON expressions.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SCHEDULER_CRON_TYPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SCHEDULER_CRON_TYPE+++`
endif::add-copy-button-to-env-var[]
-- a|
`cron4j`, `quartz`, `unix`, `spring`, `spring53` 
|`quartz`


a|icon:lock[title=Fixed at build time] [[quarkus-scheduler_quarkus.scheduler.metrics.enabled]]`link:#quarkus-scheduler_quarkus.scheduler.metrics.enabled[quarkus.scheduler.metrics.enabled]`

[.description]
--
Scheduled task metrics will be enabled if a metrics extension is present and this value is true.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SCHEDULER_METRICS_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SCHEDULER_METRICS_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-scheduler_quarkus.scheduler.enabled]]`link:#quarkus-scheduler_quarkus.scheduler.enabled[quarkus.scheduler.enabled]`

[.description]
--
If schedulers are enabled.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SCHEDULER_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SCHEDULER_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-scheduler_quarkus.scheduler.overdue-grace-period]]`link:#quarkus-scheduler_quarkus.scheduler.overdue-grace-period[quarkus.scheduler.overdue-grace-period]`

[.description]
--
Scheduled task will be flagged as overdue if next execution time is exceeded by this period.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SCHEDULER_OVERDUE_GRACE_PERIOD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SCHEDULER_OVERDUE_GRACE_PERIOD+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`1S`

|===
ifndef::no-duration-note[]
[NOTE]
[id='duration-note-anchor-{summaryTableId}']
.About the Duration format
====
The format for durations uses the standard `java.time.Duration` format.
You can learn more about it in the link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-[Duration#parse() javadoc].

You can also provide duration values starting with a number.
In this case, if the value consists only of a number, the converter treats the value as seconds.
Otherwise, `PT` is implicitly prepended to the value to obtain a standard `java.time.Duration` format.
====
endif::no-duration-note[]
